--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="notification-body unread-message">
         <img class="w-20" src="./assets/images/avatar-mark-webber.webp" alt="mark Webber">
         <div class="notification-message">
-          <p><span class="user-name">Mark Webber</span> reacted to your recent post <span>My first
+          <p><strong class="user-name">Mark Webber</strong> reacted to your recent post <span>My first
               tournament
               today!</span><span class="red-dot"></span></p>
           <p class="time-stamp">1m ago</p>
@@ -61,7 +61,7 @@
       <div class="notification-body  unread-message">
         <img src="./assets/images/avatar-angela-gray.webp" alt="Angela Gray">
         <div class="notification-message">
-          <p><span class="user-name">Angela Gray</span> followed you<span class="red-dot"></span></p>
+          <p><strong class="user-name">Angela Gray</strong> followed you<span class="red-dot"></span></p>
           <p class="time-stamp">5m ago</p>
         </div>
       </div>
@@ -69,7 +69,7 @@
       <div class="notification-body unread-message">
         <img src="./assets/images/avatar-jacob-thompson.webp" alt="jacob thompson">
         <div class="notification-message">
-          <p><span class="user-name">Jacob Thompson</span> has joined your group <span id="chess-club">Chess Club</span>
+          <p><strong class="user-name">Jacob Thompson</strong> has joined your group <span id="chess-club">Chess Club</span>
             <span class="red-dot"></span>
           </p>
           <p class="time-stamp">5 days ago</p>
@@ -79,7 +79,7 @@
       <div class="notification-body ">
         <img src="./assets/images/avatar-rizky-hasanuddin.webp" alt="Rizky Hasanuddin">
         <div class="notification-message">
-          <p><span class="user-name">Rizky Hasanuddin</span> sent you a private message
+          <p><strong class="user-name">Rizky Hasanuddin</strong> sent you a private message
           </p>
           <p class="time-stamp">5 days ago</p>
         </div>
@@ -94,7 +94,7 @@
         <img src="./assets/images/avatar-kimberly-smith.webp" alt="kimberly smith">
         <div class="notification-message">
           <div class="message-with-picture">
-            <p><span class="user-name">Kimberly Smith</span> commented on your picture
+            <p><strong class="user-name">Kimberly Smith</strong> commented on your picture
             </p>
             <img id="chess-image" src="./assets/images/image-chess.webp" alt="chess image">
           </div>
@@ -105,7 +105,7 @@
       <div class="notification-body">
         <img src="./assets/images/avatar-nathan-peterson.webp" alt="mark Webber">
         <div class="notification-message">
-          <p><span class="user-name">Nathan Peterson</span> reacted to your recent post <span>5 end-game strategies to
+          <p><strong class="user-name">Nathan Peterson</strong> reacted to your recent post <span>5 end-game strategies to
               increase your win rate</span>
           </p>
           <p class="time-stamp">2 weeks ago</p>
@@ -115,7 +115,7 @@
       <div class="notification-body">
         <img src="./assets/images/avatar-anna-kim.webp" alt="mark Webber">
         <div class="notification-message">
-          <p><span class="user-name">Anna Kim</span> left the group <span id="chess-club-2">Chess Club</span>
+          <p><strong class="user-name">Anna Kim</strong> left the group <span id="chess-club-2">Chess Club</span>
           </p>
           <p class="time-stamp">2 weeks ago</p>
         </div>
@@ -135,7 +135,6 @@
       redDot.map(redDot => redDot.classList.remove('red-dot'));
     }
     markAsReadBtn.addEventListener("click", setReadState);
-
   </script>
 </body>
 
